# guise-server-lib

./: .gitignore  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/guise-server-lib/: address.h  req_challenge.h  req_session_query.h  req_user_login.h  server.h  transport.h  unique_id.h  user.h  user_session.h  user_sessions.h  users.h  utils.h
src/include/user-server-lib/: address.h  req_challenge.h  req_user_login.h  server.h  transport.h  unique_id.h  user.h  user_session.h  user_sessions.h  users.h  utils.h
src/lib/: CMakeLists.txt  address.c  cipher.h  req_challenge.c  req_login.c  req_session_query.c  server.c  unique_id.c  user_session.c  user_sessions.c  users.c
